--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,25 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mysocialmedia">
 
-    <application android:name="androidx.multidex.MultiDexApplication"
+    <application
+        android:name="androidx.multidex.MultiDexApplication"
         android:icon="@drawable/ic_launcher_post"
         android:roundIcon="@drawable/ic_launcher_post">
-        <activity android:name=".CreatePostActivity"
-            android:label="Create Post"
-            android:theme="@style/Theme.MySocialMedia"
-            android:parentActivityName=".MainActivity">
-        </activity>
+        <activity android:name=".activities.comment_box"
+            android:label="Comment Box"
+            android:parentActivityName=".activities.MainActivity"
+            android:theme="@style/Theme.MySocialMedia"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.CreatePostActivity"
+            android:label="Create Post"
+            android:parentActivityName=".activities.MainActivity"
+            android:theme="@style/Theme.MySocialMedia"></activity>
+        <activity
+            android:name=".activities.MainActivity"
             android:label="My Social Media"
             android:theme="@style/Theme.MySocialMedia" />
         <activity
-            android:name=".SignInActivity"
+            android:name=".activities.SignInActivity"
             android:label="My Social Media"
             android:theme="@style/Theme.MySocialMedia">
             <intent-filter>
